--- a/tutorials/teams-to-azure-blob.qmd
+++ b/tutorials/teams-to-azure-blob.qmd
@@ -1,5 +1,9 @@
 ---
 title: "Teams → Azure Blob (Logic Apps)"
+execute:
+  eval: false
+author: Puchun Niu
+authors: Sonam Yang
 date: 01/16/2026
 format: html
 editor: visual
@@ -130,6 +134,7 @@ Any new or modified file in the Teams library is automatically mirrored to:
 `bovianalyticsstorage` → container `bovianalytics-data` → `us/GEMs/{FilenameWithExtension}`
 
 Updates overwrite existing files, and new files are created reliably at very low cost.
+
 
 
 
